--- a/components/menu/demo/horizontal.html
+++ b/components/menu/demo/horizontal.html
@@ -36,7 +36,7 @@ var App = React.createClass({
       ),
       React.createElement(
         _antd.Menu.Item,
-        { key: 'app', disabled: true },
+        { key: 'app' },
         React.createElement(_antd.Icon, { type: 'appstore' }),
         '导航二'
       ),
@@ -106,7 +106,7 @@ ReactDOM.render(React.createElement(App, null), document.getElementById('compone
         <span class="hljs-tag">&lt;<span class="hljs-title">Menu.Item</span> <span class="hljs-attribute">key</span>=<span class="hljs-value">"mail"</span>&gt;</span>
           <span class="hljs-tag">&lt;<span class="hljs-title">Icon</span> <span class="hljs-attribute">type</span>=<span class="hljs-value">"mail"</span> /&gt;</span>导航一
         <span class="hljs-tag">&lt;/<span class="hljs-title">Menu.Item</span>&gt;</span>
-        <span class="hljs-tag">&lt;<span class="hljs-title">Menu.Item</span> <span class="hljs-attribute">key</span>=<span class="hljs-value">"app"</span> <span class="hljs-attribute">disabled</span>&gt;</span>
+        <span class="hljs-tag">&lt;<span class="hljs-title">Menu.Item</span> <span class="hljs-attribute">key</span>=<span class="hljs-value">"app"</span>&gt;</span>
           <span class="hljs-tag">&lt;<span class="hljs-title">Icon</span> <span class="hljs-attribute">type</span>=<span class="hljs-value">"appstore"</span> /&gt;</span>导航二
         <span class="hljs-tag">&lt;/<span class="hljs-title">Menu.Item</span>&gt;</span>
         <span class="hljs-tag">&lt;<span class="hljs-title">SubMenu</span> <span class="hljs-attribute">title</span>=<span class="hljs-value">{&lt;span</span>&gt;</span><span class="hljs-tag">&lt;<span class="hljs-title">Icon</span> <span class="hljs-attribute">type</span>=<span class="hljs-value">"setting"</span> /&gt;</span>导航 - 子菜单<span class="hljs-tag">&lt;/<span class="hljs-title">span</span>&gt;</span>}&gt;
