--- a/style/components/switch.less
+++ b/style/components/switch.less
@@ -51,13 +51,13 @@
   }
 
   &-disabled {
-    cursor: not-allowed;
+    cursor: no-drop;
     background: #f4f4f4;
     border-color: #f4f4f4;
 
     &:after {
       background: #ccc;
-      cursor: not-allowed;
+      cursor: no-drop;
     }
 
     &-inner {
