--- a/components/select/demo/basic.html
+++ b/components/select/demo/basic.html
@@ -12,40 +12,27 @@ function handleChange(value) {
 }
 
 ReactDOM.render(React.createElement(
-  'div',
-  null,
+  _antd.Select,
+  { defaultValue: 'lucy', style: { width: 120 }, onChange: handleChange },
   React.createElement(
-    _antd.Select,
-    { defaultValue: 'lucy', style: { width: 120 }, onChange: handleChange },
-    React.createElement(
-      Option,
-      { value: 'jack' },
-      'Jack'
-    ),
-    React.createElement(
-      Option,
-      { value: 'lucy' },
-      'Lucy'
-    ),
-    React.createElement(
-      Option,
-      { value: 'disabled', disabled: true },
-      'Disabled'
-    ),
-    React.createElement(
-      Option,
-      { value: 'yiminghe' },
-      'yiminghe'
-    )
+    Option,
+    { value: 'jack' },
+    'Jack'
   ),
   React.createElement(
-    _antd.Select,
-    { defaultValue: 'lucy', style: { width: 120 }, disabled: true },
-    React.createElement(
-      Option,
-      { value: 'lucy' },
-      'Lucy'
-    )
+    Option,
+    { value: 'lucy' },
+    'Lucy'
+  ),
+  React.createElement(
+    Option,
+    { value: 'disabled', disabled: true },
+    'Disabled'
+  ),
+  React.createElement(
+    Option,
+    { value: 'yiminghe' },
+    'yiminghe'
   )
 ), document.getElementById('components-select-demo-basic'));})()</script><div class="highlight"><pre><code class="javascript"><span class="hljs-keyword">import</span> { Select } <span class="hljs-keyword">from</span> <span class="hljs-string">'antd'</span>;
 <span class="hljs-keyword">const</span> Option = Select.Option;
@@ -54,17 +41,14 @@ ReactDOM.render(React.createElement(
   <span class="hljs-built_in">console</span>.log(<span class="hljs-string">'selected '</span> + value);
 }
 
-ReactDOM.render(<span class="xml"><span class="hljs-tag">&lt;<span class="hljs-title">div</span>&gt;</span>
-  <span class="hljs-tag">&lt;<span class="hljs-title">Select</span> <span class="hljs-attribute">defaultValue</span>=<span class="hljs-value">"lucy"</span> <span class="hljs-attribute">style</span>=<span class="hljs-value">{{width:120}}</span> <span class="hljs-attribute">onChange</span>=<span class="hljs-value">{handleChange}</span>&gt;</span>
+ReactDOM.render(
+  <span class="xml"><span class="hljs-tag">&lt;<span class="hljs-title">Select</span> <span class="hljs-attribute">defaultValue</span>=<span class="hljs-value">"lucy"</span> <span class="hljs-attribute">style</span>=<span class="hljs-value">{{width:120}}</span> <span class="hljs-attribute">onChange</span>=<span class="hljs-value">{handleChange}</span>&gt;</span>
     <span class="hljs-tag">&lt;<span class="hljs-title">Option</span> <span class="hljs-attribute">value</span>=<span class="hljs-value">"jack"</span>&gt;</span>Jack<span class="hljs-tag">&lt;/<span class="hljs-title">Option</span>&gt;</span>
     <span class="hljs-tag">&lt;<span class="hljs-title">Option</span> <span class="hljs-attribute">value</span>=<span class="hljs-value">"lucy"</span>&gt;</span>Lucy<span class="hljs-tag">&lt;/<span class="hljs-title">Option</span>&gt;</span>
     <span class="hljs-tag">&lt;<span class="hljs-title">Option</span> <span class="hljs-attribute">value</span>=<span class="hljs-value">"disabled"</span> <span class="hljs-attribute">disabled</span>&gt;</span>Disabled<span class="hljs-tag">&lt;/<span class="hljs-title">Option</span>&gt;</span>
     <span class="hljs-tag">&lt;<span class="hljs-title">Option</span> <span class="hljs-attribute">value</span>=<span class="hljs-value">"yiminghe"</span>&gt;</span>yiminghe<span class="hljs-tag">&lt;/<span class="hljs-title">Option</span>&gt;</span>
   <span class="hljs-tag">&lt;/<span class="hljs-title">Select</span>&gt;</span>
-  <span class="hljs-tag">&lt;<span class="hljs-title">Select</span> <span class="hljs-attribute">defaultValue</span>=<span class="hljs-value">"lucy"</span> <span class="hljs-attribute">style</span>=<span class="hljs-value">{{width:120}}</span> <span class="hljs-attribute">disabled</span>&gt;</span>
-    <span class="hljs-tag">&lt;<span class="hljs-title">Option</span> <span class="hljs-attribute">value</span>=<span class="hljs-value">"lucy"</span>&gt;</span>Lucy<span class="hljs-tag">&lt;/<span class="hljs-title">Option</span>&gt;</span>
-  <span class="hljs-tag">&lt;/<span class="hljs-title">Select</span>&gt;</span>
-<span class="hljs-tag">&lt;/<span class="hljs-title">div</span>&gt;</span>, document.getElementById('components-select-demo-basic'));</span></code></pre></div>
+, document.getElementById('components-select-demo-basic'));</span></code></pre></div>
   </div>
   <div class="code-box-meta markdown">
     <div class="code-box-title">
