Updated theme primary color.

--- a/style/themes/default/custom.less
+++ b/style/themes/default/custom.less
@@ -2,7 +2,7 @@
 @css-prefix             : ant-;
 
 // Color
-@primary-color          : #19ac9e;
+@primary-color          : #ea6947;
 @success-color          : #87d068;
 @error-color            : #f60;
 @warning-color          : #fac450;
@@ -23,7 +23,7 @@
 @icon-url               : "../fonts/antd_font";
 
 // LINK
-@link-color             : #19ac9e;
+@link-color             : #ea6947;
 @link-hover-color       : tint(@link-color, 20%);
 @link-active-color      : shade(@link-color, 5%);
 @link-hover-decoration  : none;
