Add second primary color to some Radio and Switch component

--- a/style/components/pagination.less
+++ b/style/components/pagination.less
@@ -35,15 +35,15 @@
 
     &:hover {
       transition: all 0.3s ease;
-      border-color: @primary-color;
+      border-color: @second-primary-color;
       a {
-        color: @primary-color;
+        color: @second-primary-color;
       }
     }
 
     &-active {
-      background-color: @primary-color;
-      border-color: @primary-color;
+      background-color: @second-primary-color;
+      border-color: @second-primary-color;
 
       a,
       &:hover a {
@@ -64,7 +64,7 @@
 
     &:hover {
       &:after {
-        color: @primary-color;
+        color: @second-primary-color;
         .iconfont-size-under-12px(8px);
         letter-spacing: -1px;
         font-family: "anticon";
@@ -131,10 +131,10 @@
     }
 
     &:hover {
-      border-color: @primary-color;
+      border-color: @second-primary-color;
 
       a {
-        color: @primary-color;
+        color: @second-primary-color;
       }
     }
   }
@@ -224,7 +224,7 @@
       text-align: center;
 
       &:hover {
-        border-color: @primary-color;
+        border-color: @second-primary-color;
       }
     }
 
