--- a/style/themes/default/custom.less
+++ b/style/themes/default/custom.less
@@ -3,6 +3,7 @@
 
 // Color
 @primary-color          : #ea6947;
+@second-primary-color   : #7f7583;
 @success-color          : #87d068;
 @error-color            : #f60;
 @warning-color          : #fac450;
